Fix room transition in VR; add black cubes; removed siblings; blurred welcome;

--- a/style.css
+++ b/style.css
@@ -325,11 +325,18 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.662);
+  background-color: #130910;
   font-family: "Montserrat-Regular";
   font-size: 20px;
   backdrop-filter: blur(30px);
+  transition: all 4s;
 }
+
+#welcomePopupContainer.isSemiTransparent{
+  background-color: transparent;
+}
+
+
 
 #welcomePopup
 {
